Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <hr size="3" color="Teal" no shading/>
 
   <p>
-    <a href="Hobbies.html">My Hobbies</a>
+    <a href="hobbies.html">My Hobbies</a>
   </p>
   <p>
     <em><strong><a href="contact.html">Contact Me</a></strong></em>
